[Fixed] Bugs and site optimization

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
   background-color: #0d0d2d;
 }
 section:nth-child(1) {
-  background: url("https://static.collectui.com/shots/3603919/corridor-large");
+  background: url("https://media.giphy.com/media/5hojddB4LYYv9BbXH3/giphy.gif");
   background-repeat: no-repeat;
   background-position: center;
   display: grid;
