--- a/less/utils/_mixins.less
+++ b/less/utils/_mixins.less
@@ -8,7 +8,7 @@
 }
 
 .mixin-background(){
-  background: url("https://static.collectui.com/shots/3603919/corridor-large");
+  background: url("https://media.giphy.com/media/5hojddB4LYYv9BbXH3/giphy.gif");
   background-repeat: no-repeat;
   background-position:center;
 }
